force-app/main/default/objects/TLG_Task_History__c/TLG_Task_History__c.object-meta.xml
<CustomObject>
    <label>Task History</label>
    <nameField>
        <displayFormat>TH-{0000}`</displayFormat>
        <label>Task History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>