force-app/main/default/objects/TLG_Task_History__c/fields/TLG_Board__c.field-meta.xml
<CustomField>
    <fullName>TLG_Board__c</fullName>
    <formula>TLG_Task__r.TLG_Board__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board</label>
    <type>Text</type>
</CustomField>