force-app/main/default/objects/TLG_Task_History__c/fields/TLG_Days_Spent__c.field-meta.xml
<CustomField>
    <fullName>TLG_Days_Spent__c</fullName>
    <label>Days Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>