force-app/main/default/objects/TLG_Task_History__c/fields/TLG_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>TLG_Last_Modified_Date__c</fullName>
    <label>Last Modified Date</label>
    <type>Date</type>
</CustomField>