force-app/main/default/objects/TLG_Task_History__c/fields/TLG_No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>TLG_No_of_Days__c</fullName>
    <formula>IF( ISBLANK( TLG_Last_Modified_Date__c ) ,  TODAY()  -  TLG_Date_Stamped__c ,  TLG_Last_Modified_Date__c  -  TLG_Date_Stamped__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>